# GeneticsLibrary

./: .gitignore  CMakeLists.txt  README.md
src/: Aminoacid.cpp  Aminoacid.h  ErrorsConstants.h  FASTAReader.cpp  FASTAReader.h  Protein.cpp  Protein.h  Record.cpp  Record.h  SequenceWrapper.cpp  SequenceWrapper.h  Validators.cpp  Validators.h  constants.h  dna.cpp  dna.h  record.cpp  record.h  rna.cpp  rna.h  sequence.cpp  sequence.h
tests/: testAminoacid.cpp  testDNA.cpp  testFASTAReader.cpp  testProtein.cpp  testRNA.cpp  testRecord.cpp  testSequence.cpp  testSequenceWrapper.cpp  testValidators.cpp
